Events based index date

--- a/ra-ui/jsconfig.json
+++ b/ra-ui/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["components/*"],
-      "@/utils/*": ["utils/*"],
+      "@/utils/*": ["app/utils/*"],
       "@/hooks/*": ["hooks/*"],
       "@/styles/*": ["styles/*"],
       "@/contexts/*": ["contexts/*"]
